--- a/header.jst.html
+++ b/header.jst.html
@@ -1,16 +1,14 @@
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body>&lt;% if(focus == 'publisher') { %&gt;
+<% if(focus == 'publisher') { %>
     <div id="back-to-library">
         <a>
             <span class="hss-ui-icons hss-reply link"></span>
-            &lt;%- MESSAGES.HEADER.BACK_TO_LIBRARY %&gt;
+            <%- MESSAGES.HEADER.BACK_TO_LIBRARY %>
         </a>
     </div>
-&lt;% } %&gt;
-&lt;% if(focus == 'library') { %&gt;
+<% } %>
+<% if(focus == 'library') { %>
     <div id="create-new" class="btn-group page-main-callout">
-        <button class="btn" data-target="#publisher-modal">&lt;%- MESSAGES.HEADER.CREATE_AD_BUTTON %&gt;</button>
+        <button class="btn" data-target="#publisher-modal"><%- MESSAGES.HEADER.CREATE_AD_BUTTON %></button>
     </div>
-&lt;% } %&gt;
-<h1>&lt;%- MESSAGES.HEADER.TITLE %&gt;</h1>
-</body></html>
+<% } %>
+<h1><%- MESSAGES.HEADER.TITLE %></h1>
